# lerobot-sim-mastery

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: .env.example
course/: 00_introduction.md  01_lerobot_dataset_format.md  02_data_analysis.md  03_act_policy.md  04_training_on_colab.md  05_evaluation_in_sim.md  06_diffusion_policy.md  07_policy_comparison.md  08_sim_to_real.md
kaggle_download/outputs/train/act_aloha_transfer_kaggle/checkpoints/020000/pretrained_model/: config.json
kaggle_download/outputs/train/act_aloha_transfer_kaggle/checkpoints/040000/pretrained_model/: train_config.json
outputs/analysis/: action_smoothness.json  outlier_detection.json
outputs/comparison/: comparison_report.md
outputs/eval_act/: eval_info.json
outputs/eval_act/step_060000/: eval_info.json
outputs/eval_act_a40/: eval_info.json
outputs/eval_act_kaggle/: eval_info.json
outputs/eval_act_matched/: eval_info.json
outputs/eval_diffusion/: eval_info.json
outputs/inspection/: action_per_dim_stats.json  episode_stats.json  metadata.json  observation_state_per_dim_stats.json  sample_stats.json
outputs/train/act_aloha_transfer/checkpoints/020000/pretrained_model/: config.json  policy_preprocessor.json  train_config.json
outputs/train/act_aloha_transfer/checkpoints/040000/pretrained_model/: config.json  policy_postprocessor.json  train_config.json
src/: analyze_dataset.py  compare_policies.py  inspect_dataset.py
tests/: test_analyze_dataset.py  test_compare_policies.py  test_inspect_dataset.py
