[project]
name = "lerobot-sim-mastery"
version = "0.1.0"
description = "End-to-end LeRobot fluency: dataset mastery + ACT/Diffusion policy training on ALOHA sim manipulation tasks"
authors = [{ name = "Adi Munot" }]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"
